# command-terimal-opencode-agent

./: .thumbnail  README.md  TODOS.md  Terminal Manager.dc.html  Wireline App.dc.html  build.js  check-model-picker.js  check-syntax.js  package-lock.json  package.json
.github/workflows/: release.yml
_ds/broadsheet-842b0694-9893-4be7-89c5-dcb6c1fdef65/: _adherence.oxlintrc.json  _ds_manifest.json  readme.md
assets/: broadsheet.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  zmodem.rs
