[package]
name = "wireline"
version = "1.25.1"
description = "Wireline — terminal manager with an AI Operator"
authors = []
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = ["dialog-open", "dialog-save", "shell-open"] }
portable-pty = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
